moved config and database config files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 
+application/config/config.php
+application/config/database.php
+
+
 system/*
 c/*
 
